--- a/C#/Tanks/Tanks/Tanks.csproj
+++ b/C#/Tanks/Tanks/Tanks.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions.cs" />
     <Compile Include="AObject.cs" />
     <Compile Include="Object\Car.cs" />
     <Compile Include="FormTanks.cs">
