--- a/C#/Tanks/Tanks/Tanks.csproj
+++ b/C#/Tanks/Tanks/Tanks.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Act.cs" />
     <Compile Include="Object\Bang.cs" />
+    <Compile Include="Object\Crater.cs" />
     <Compile Include="Script\Actions.cs" />
     <Compile Include="AObject.cs" />
     <Compile Include="Object\Car.cs" />
