--- a/C#/Tanks/Tanks/Tanks.csproj
+++ b/C#/Tanks/Tanks/Tanks.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Game2D">
-      <HintPath>bin\Release\Game2D.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Act.cs" />
+    <Compile Include="Structure\Act.cs" />
     <Compile Include="Object\Bang.cs" />
     <Compile Include="Object\Crater.cs" />
     <Compile Include="Script\Actions.cs" />
-    <Compile Include="AObject.cs" />
+    <Compile Include="Structure\AObject.cs" />
     <Compile Include="Object\Car.cs" />
     <Compile Include="FormTanks.cs">
       <SubType>Form</SubType>
@@ -62,7 +59,7 @@
       <DependentUpon>FormTanks.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
-    <Compile Include="IDrawn.cs" />
+    <Compile Include="Structure\IDrawn.cs" />
     <Compile Include="List\ListShot.cs" />
     <Compile Include="List\ListUnit.cs" />
     <Compile Include="Program.cs" />
@@ -71,7 +68,7 @@
     <Compile Include="Object\Tank.cs" />
     <Compile Include="Resources\Sound.cs" />
     <Compile Include="Script\Shooting.cs" />
-    <Compile Include="Unit.cs" />
+    <Compile Include="Structure\Unit.cs" />
     <EmbeddedResource Include="FormTanks.resx">
       <DependentUpon>FormTanks.cs</DependentUpon>
     </EmbeddedResource>
